--- a/package.json
+++ b/package.json
@@ -4,13 +4,34 @@
   "description": "Server For A NFL-spreadpicker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/server.js",
+    "dev": "tsc && nodemon dist/server.js",
+    "postinstall": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^6.0.8",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/jsonwebtoken": "^8.5.2",
+    "@types/node": "^14.0.11",
+    "typescript": "^4.3.4"
   }
 }
